# elo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Fastfile  ICON-BRIEF.md  IOS-PORT.md  Makefile  PKGBUILD  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/elo-cli/: Cargo.toml
crates/elo-cli/src/: main.rs
crates/elo-compat/: Cargo.toml
crates/elo-compat/src/: lib.rs
crates/elo-compat/tests/: differential_fuzz.rs
crates/elo-core/: Cargo.toml
crates/elo-core/src/: ast.rs  eval.rs  formatter.rs  lexer.rs  lib.rs  locale.rs  parser.rs  rates.rs  session.rs  value.rs
crates/elo-core/tests/: golden_tests.rs  property_tests.rs
crates/elo-data/: Cargo.toml
crates/elo-data/src/: currencies.rs  functions.rs  lib.rs  timezones.rs  units.rs
crates/elo-tauri/: Cargo.toml  tauri.conf.json
crates/elo-tauri/capabilities/: default.json  mobile.json
crates/elo-tauri/icons/: icon.icns
crates/elo-tauri/src/: lib.rs  main.rs
docs/: architecture.md  compatibility-matrix.md  plan.md
elo-tauri/: index.html  package.json  pnpm-lock.yaml
elo-tauri/src/: main.ts  styles.css
fastlane/: .env.example  Appfile  Fastfile
packaging/homebrew/: elo.rb
tests/goldens/: expressions.txt
