[package]
name = "elo-core"
version.workspace = true
edition.workspace = true

[dependencies]
elo-data = { path = "../elo-data" }
chrono = "0.4"
chrono-tz = "0.10"
moneta = "0.7"
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"

[dev-dependencies]
proptest = "1"
