[package]
name = "elo-tauri"
version.workspace = true
description = "Elo — a Numi-compatible calculator"
edition = "2021"

[lib]
name = "elo_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
elo-core = { path = "../elo-core" }
tauri = { version = "2", features = [] }                  # base, no tray-icon (added for desktop below)
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop-only: tray + global shortcuts (no equivalent on iOS/Android).
# Cargo merges features additively, so the base `tauri` dep stays minimal and
# the desktop target adds `tray-icon`. Must use real built-in cfgs here
# (target_os) — Tauri's desktop/mobile cfgs are only available in Rust source.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

# iOS-only deps used by the iCloud bridge (Phase 4).
[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
  "NSFileManager",
  "NSURL",
  "NSString",
  "NSArray",
  "NSError",
] }
